tests/Should_succeed/2_Variables/15_GlobalBoolDeclMult.decaf
class Test {
	boolean a, b;
	void main(){
		WriteBool(a);
		WriteString("=false");
		WriteString("\n");
		WriteBool(b);
		WriteString("=false");
		WriteString("\n");
	}
}