Tests/Should_fail/2_Variables/03_AffVariablesGlobalesTypesIncorrecte.decaf
class Test {
	int a;
    boolean b;
	void main(){
		a = b;
	}
}